--- a/Faker/Faker/Faker.csproj
+++ b/Faker/Faker/Faker.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Music.cs" />
     <Compile Include="Name.cs" />
     <Compile Include="Number.cs" />
+    <Compile Include="People.cs" />
     <Compile Include="Phone.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Time.cs" />
